get(0) zu getFirst()